update in change status modal

--- a/contact/templates/contact/list_view.html
+++ b/contact/templates/contact/list_view.html
@@ -78,7 +78,7 @@
                 </div>
               </td>
               <td>{{ contact.organization }}</td>
-              <td><span class='address'>{{ contact.address|linebreaks }}</span></td>
+              <td><span class='address'>{{ contact.address|linebreaksbr  }}</span></td>
               <td>
                 <div class="contact-group">
                   <div class="contact-details">
