--- a/customer/templates/customer/assign_user_form.html
+++ b/customer/templates/customer/assign_user_form.html
@@ -110,7 +110,7 @@
             <button type="submit" class="btn btn-gradient-primary me-3" name="action" value="add_more_user">
               Add Next User
             </button>
-            <button type="submit" class="btn btn-gradient-success" name="action" value="done">Done</button>
+            <button type="submit" class="btn btn-gradient-primary" name="action" value="done">Done</button>
         </form>
       </div>
     </div>
