--- a/customer/templates/customer/_partials/_csm_form.html
+++ b/customer/templates/customer/_partials/_csm_form.html
@@ -5,18 +5,24 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p class="mb-0">Currently assigned to CSM</p>
-        <div class="fw-bold">
-          {{ customer.manager.full_name }}
+
+        <div class="form-group">
+          <label>Current CSM</label>
+          <div class="fw-bold">
+            {{ customer.manager.full_name }}
+          </div>
         </div>
+    
         <hr>
-        <p>Re-assign customer to CSM</p>
-        <div class="mb-3">
-          {{ customer_csm_form.manager }}
+        <div class="form-group">
+          <label>Re-assign to CSM</label>
+          <div class="mb-3">
+            {{ customer_csm_form.manager }}
+          </div>
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-outline-success" data-bs-dismiss="modal">Cancel</button>
-        <button type="submit" class="btn btn-gradient-success">Update</button>
+        <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal">Cancel</button>
+        <button type="submit" class="btn btn-gradient-primary">Update</button>
       </div>
   </form>
