--- a/customer/templates/customer/admin_user.html
+++ b/customer/templates/customer/admin_user.html
@@ -90,7 +90,7 @@
           <br>
           <a href="{% url 'customer:select-plan' customer_id %}" class="btn btn-light me-3">Go Back</a>
           <button type="submit" class="btn btn-gradient-primary me-3" name="action" value="add_more_user">Add Next User</button>
-          <button type="submit" class="btn btn-gradient-success" name="action" value="done">Done</button>
+          <button type="submit" class="btn btn-gradient-primary" name="action" value="done">Done</button>
         </form>
       </div>
     </div>
