--- a/prospect/templates/prospect/_partials/_crm_form.html
+++ b/prospect/templates/prospect/_partials/_crm_form.html
@@ -1,22 +1,28 @@
 <form method="POST" action="{% url 'prospect:update-crm-ajax' prospect.uuid %}">
-    {% csrf_token %}
-      <div class="modal-header">
-        <h3 class="modal-title">Change Manager</h3>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  {% csrf_token %}
+  <div class="modal-header">
+    <h3 class="modal-title">Change Customer Relationship Manager</h3>
+    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  </div>
+  <div class="modal-body">
+    <div class="form-group">
+      <label>Current CRM</label>
+      <div class="fw-bold">
+        {{ prospect.manager.full_name }}
       </div>
-      <div class="modal-body">
-        <p class="mb-0">Currently assigned to CRM</p>
-        <div class="fw-bold">
-          {{ prospect.manager.full_name }}
-        </div>
-        <hr>
-        <p>Re-assign prospect to CRM</p>
-        <div class="mb-3">
-          {{ prospect_crm_form.manager }}
-        </div>
+    </div>
+
+    <hr>
+    <div class="form-group">
+      <label>Re-assign to CRM</label>
+      <div class="mb-3">
+        {{ prospect_crm_form.manager }}
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-success" data-bs-dismiss="modal">Cancel</button>
-        <button type="submit" class="btn btn-gradient-success">Update</button>
-      </div>
-  </form>
+    </div>
+
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal">Cancel</button>
+    <button type="submit" class="btn btn-gradient-primary">Re-assign CRM</button>
+  </div>
+</form>
