--- a/prospect/templates/prospect/_partials/_remarks_form.html
+++ b/prospect/templates/prospect/_partials/_remarks_form.html
@@ -5,13 +5,15 @@
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
   </div>
   <div class="modal-body">
-    <p>Remarks for {{ prospect.name }}</p>
-    <div class="mb-3">
-      {{ prospect_remarks_form.remarks }}
+    <div class="form-group">
+      <label>Remarks for {{ prospect.name }}</label>
+      <div class="mb-3">
+        {{ prospect_remarks_form.remarks }}
+      </div>
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-success" data-bs-dismiss="modal">Cancel</button>
-    <button type="submit" class="btn btn-gradient-success">Update</button>
+    <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal">Cancel</button>
+    <button type="submit" class="btn btn-gradient-primary">Update Remarks</button>
   </div>
 </form>
