--- a/prospect/templates/prospect/_partials/_remarks_view.html
+++ b/prospect/templates/prospect/_partials/_remarks_view.html
@@ -4,7 +4,7 @@
   </div>
   <div class="modal-body">
     <div class="mb-3">
-      {{ prospect.remarks|linebreaks }}
+      {{ prospect.remarks|linebreaksbr  }}
     </div>
   </div>
   <div class="modal-footer">
