--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -20,13 +20,13 @@
         {% csrf_token %}
 
         <div class="form-group">
-            <p class="text-muted font-weight-light mb-0">Email</p>
+            <label>Email</label>
             <input type="email" class="form-control form-control-lg" name="login" autocomplete="email" maxlength="320"
                 required="" id="id_login">
         </div>
 
         <div class="form-group">
-            <p class="text-muted font-weight-light mb-0">Password</p>
+            <label>Password</label>
             <input type="password" class="form-control form-control-lg" name="password" autocomplete="current-password"
                 required="" aria-describedby="id_password_helptext" id="id_password">
         </div>
