--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -45,17 +45,17 @@
                     {% csrf_token %}
                     <div class="auth-form-light text-left font-weight-light px-5">
                         <div class="form-group">
-                            <label class="text-muted font-weight-light mb-0">Current Password:</label>
+                            <label>Current Password:</label>
                             <input type="password" class="form-control form-control-lg" name="oldpassword"
                                 autocomplete="current-password" required="" aria-describedby="id_password_helptext"
                                 id="id_oldpassword">
                         </div>
                         <div class="form-group">
-                            <p><label class="text-muted font-weight-light mb-0">New Password:</label>
-                                <input type="password" class="form-control form-control-lg" name="password1" required=""
-                                    aria-describedby="id_password_helptext" id="id_password1">
+                            <label>New Password:</label>
+                            <input type="password" class="form-control form-control-lg" name="password1" required=""
+                                aria-describedby="id_password_helptext" id="id_password1">
                         </div>
-                        <span class="helptext" id="id_password1_helptext"></span></p>
+                        <span class="helptext" id="id_password1_helptext"></span>
                         <ul class="transparent-text font-weight-light">
                             <li>
                                 Your password can’t be too similar to your other personal information.
@@ -71,7 +71,7 @@
                             </li>
                         </ul>
                         <div class="form-group">
-                            <label class="text-muted font-weight-light mb-0">New Password (again):</label>
+                            <label>New Password (again):</label>
                             <input type="password" class="form-control form-control-lg" name="password2"
                                 autocomplete="current-password" required="" aria-describedby="id_password_helptext"
                                 id="id_password2">
