--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -34,7 +34,7 @@
                     {% slot body %}
                         {% csrf_token %}
                         <div class="form-group">
-                            <label class="text-muted font-weight-light mb-0">Email</label>
+                            <label>Email</label>
                             <input type="email" class="form-control form-control-lg" name="login" autocomplete="email" maxlength="320" required="" id="id_login">
                         </div>
                     {% endslot %}
