--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -19,12 +19,12 @@
         {% slot body %}
         {% csrf_token %}
         <div class="form-group">
-            <label for="id_email" class="text-muted font-weight-light mb-0">Email</label>
+            <label for="id_email">Email</label>
             <input type="email" class="form-control form-control-lg" name="email" autocomplete="email" maxlength="320"
                 required="" id="id_email">
         </div>
         <div class="form-group">
-            <p><label for="id_password1" class="text-muted font-weight-light mb-0">Password</label>
+            <p><label for="id_password1">Password</label>
                 <input type="password" class="form-control form-control-lg" name="password1"
                     autocomplete="current-password" required="" aria-describedby="id_password_helptext" maxlength="320"
                     required="" id="id_password1">
@@ -37,7 +37,7 @@
             <li>Your password can’t be entirely numeric.</li>
         </ul>
         <div class="form-group">
-            <label for="id_password2" class="text-muted font-weight-light mb-0">Confirm Password</label>
+            <label for="id_password2">Confirm Password</label>
             <input type="password" class="form-control form-control-lg" name="password2" required=""
                 aria-describedby="id_password_helptext" maxlength="320" required="" id="id_password2">
         </div>
