--- a/assets/css/custom_style.css
+++ b/assets/css/custom_style.css
@@ -29,7 +29,6 @@ h4,
 h5 {
     font-weight: 500;
     line-height: 1.3;
-    color: #1f2949;
 }
 
 h2 {
@@ -138,8 +137,7 @@ table .remarks-col {
     text-align: center;
 }
 
-table .actions-col,
-table .status-col {
+table .actions-col{
     text-align: center;
 }
 
@@ -162,7 +160,7 @@ table .sl-col {
 
 .badge {
     border-radius: 10px;
-    font-size: 11px;
+    font-size: 0.8rem;
     letter-spacing: 0.5px;
     cursor: unset;
 }
@@ -171,6 +169,16 @@ table .sl-col {
     border: 1px solid #edd1ff;
     background: #edd1ff;
     color: #9600bb;
+}
+
+.status-trial {
+    border: 1px solid #faf2b9;
+    background: #faf2b9;
+    color: #ff6500;
+}
+
+.border-trial {
+    border-left: 5px solid #fe7b00;
 }
 
 .status-meeting, .payment-due {
@@ -266,4 +274,20 @@ label {
     color: #8f9091;
     font-size: 0.85rem;
     font-weight: 500;
+}
+
+.card .dashboard-card {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1.5rem 1.5rem;
+}
+
+.prospect-status {
+    text-align: left;
+    padding: 0.75rem;
+}
+
+.status-description {
+    font-size: 0.65rem;
 }
