--- a/prospect/templates/prospect/_partials/_option_meeting_scheduled_form.html
+++ b/prospect/templates/prospect/_partials/_option_meeting_scheduled_form.html
@@ -1,14 +1,14 @@
-<div class="form-group" id="date">
-    <label for="{{ prospect_status_form.date.id_for_label }}">Date</label>
+<div class="form-group">
+    <label for="{{ prospect_status_form.date.id_for_label }}">Scheduled for Date</label>
     {{ prospect_status_form.date }}
 </div>
 
-<div class="form-group" id="date">
+<div class="form-group">
     <label for="{{ prospect_status_form.time.id_for_label }}">Time</label>
     {{ prospect_status_form.time }}
 </div>
 
-<div class="form-group" id="date">
+<div class="form-group">
     <label for="{{ prospect_status_form.remarks.id_for_label }}">Remarks</label>
     {{ prospect_status_form.remarks }}
 </div>
