--- a/templates/_partials/_sidebar.html
+++ b/templates/_partials/_sidebar.html
@@ -44,7 +44,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'prospect:list' %}">
+        <a class="nav-link" href="{% url 'prospect:overview' %}">
           <span class="menu-title">Prospects</span>
           <i class="mdi mdi-bullseye menu-icon"></i>
         </a>
