--- a/prospect/templates/prospect/_partials/_option_awaiting_form.html
+++ b/prospect/templates/prospect/_partials/_option_awaiting_form.html
@@ -1,4 +1,4 @@
-<div class="form-group" id="date">
+<div class="form-group">
     <label for="{{ prospect_status_form.remarks.id_for_label }}">Remarks</label>
     {{ prospect_status_form.remarks }}
 </div>
