--- a/prospect/templates/prospect/_partials/_option_initiated_form.html
+++ b/prospect/templates/prospect/_partials/_option_initiated_form.html
@@ -1,9 +1,9 @@
-<div class="form-group" id="date">
+<div class="form-group">
     <label for="{{ prospect_status_form.date.id_for_label }}">Date</label>
     {{ prospect_status_form.date }}
 </div>
 
-<div class="form-group" id="date">
+<div class="form-group">
     <label for="{{ prospect_status_form.remarks.id_for_label }}">Remarks</label>
     {{ prospect_status_form.remarks }}
 </div>
