--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
           <footer class="footer">
             <div class="container-fluid d-flex justify-content-between">
               <span class="text-muted d-block text-center text-sm-start d-sm-inline-block">Copyright © Tabernacle 2024</span>
-              <span class="float-none float-sm-end mt-1 mt-sm-0 text-end">Tabernacle Customer Success</span>
+              <span class="text-muted float-none float-sm-end mt-1 mt-sm-0 text-end">Tabernacle Customer Success</span>
             </div>
           </footer>
           <!-- partial -->
