--- a/customer/templates/customer/admin_user.html
+++ b/customer/templates/customer/admin_user.html
@@ -4,19 +4,12 @@
 
 {% block head_title %}{{ title }}{% endblock %}
 
-{% block navbar %}
-{% include '_partials/_navbar.html' %}
-{% endblock %}
-
-{% block sidebar %}
-{% include '_partials/_sidebar.html' %}
-{% endblock %}
 
 {% block page_title %}
 {{ title }}
 {% endblock %}
 
-{% block app_stylesheets %}
+{% block styles %}
 <link rel="stylesheet" href="{% static 'customer/css/style.css' %}">
 {% endblock %}
 
