--- a/customer/templates/customer/list_view.html
+++ b/customer/templates/customer/list_view.html
@@ -4,13 +4,6 @@
 
 {% block head_title %}{{ title }}{% endblock %}
 
-{% block navbar %}
-{% include '_partials/_navbar.html' %}
-{% endblock %}
-
-{% block sidebar %}
-{% include '_partials/_sidebar.html' %}
-{% endblock %}
 
 {% block page_title %}
 <span class="page-title-icon bg-gradient-primary text-white me-2">
@@ -19,7 +12,7 @@
 {{ title }}
 {% endblock %}
 
-{% block app_scripts %}
+{% block scripts %}
 <script src="{% static 'customer/js/app.js' %}"></script>
 {% endblock %}
 
