--- a/customer/templates/customer/list_view.html
+++ b/customer/templates/customer/list_view.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% load static %}
+{% load cash_format %}
 
 {% block head_title %}{{ title }}{% endblock %}
 
@@ -72,7 +73,7 @@
                   {{ customer.customer_plan.subscription_plan.name }}
                 </div>
                 <div class="mt-2">
-                  <span class="fs-6">₹{{ customer.customer_plan.subscription_plan.amount }}</span><small
+                  <span class="fs-6">₹{% widthratio customer.customer_plan.subscription_plan.amount 1 customer.customer_plan.duration as result %}{{ result |inr }}</span><small
                     class="text-faded">{% if customer.customer_plan.duration == 12 %}/year{% else %}/month{% endif %}</small>
                 </div>
                 {% else %}
