--- a/customer/templates/customer/select_plan.html
+++ b/customer/templates/customer/select_plan.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% load static %}
+{% load plan_format %}
+{% load cash_format %}
 
 {% block head_title %}{{ title }}{% endblock %}
 
@@ -42,59 +44,89 @@
           </div>
         </div>
 
-        <form class="forms-sample border-top py-5" action="{% url 'customer:select-plan' customer_id %}" method="POST"
+        <form class="forms-sample border-top py-4" action="{% url 'customer:select-plan' customer_id %}" method="POST"
           enctype="multipart/form-data" data-url="{% url 'plan:get-plan-amount' %}">
           {% csrf_token %}
 
-          {{ plan_options_form.duration.label_tag }}
-          {{ plan_options_form.duration }}
+          <div class="toggle-container text-uppercase fw-bold">
+            <small class="me-3">Monthly</small>
+            <input type="checkbox" id="switch" class="toggle" name="is_yearly" id="id_duration" />
+            <label for="switch">Is Yearly</label>
+            <small class="ms-3">Yearly</small>
+          </div>
 
           <div class="d-flex">
             <div class="container">
               <div class="grid-wrapper grid-col-auto">
-              {% for plan in plan_options_form.plan %}
+                {% for plan in plan_options_form.plan %}
                 <label for="{{ plan.id_for_label }}" class="radio-card">
                   {{ plan.tag }}
                   <div class="card-content-wrapper">
-                    <span class="check-icon"></span>
+
                     <div class="card-content">
-                      <img src="{% static 'images/small-church.svg' %}"/>
-                      <h5 class="pt-2">{{ plan.choice_label }}</h5>
-                      <h4>₹2999/month</h4>
+                      <div class="d-flex justify-content-between">
+                        <div class="title">{{ plan.choice_label|plan_name }}</div>
+                        <span class="check-icon"></span>
+                      </div>
+                      <div class="fw-bold fs-4 mb-3">₹{{ plan.choice_label|plan_amount|inr }}</div>
+                      <div class="text-faded">
+                        <div>per month</div>
+                        {% if plan.choice_label|plan_size == '0' %}
+                        Unlimited members
+                        {% else %}
+                        upto {{ plan.choice_label|plan_size }} members
+                        {% endif %}
+                      </div>
                     </div>
                   </div>
                 </label>
-                <!-- /.radio-card -->
                 {% endfor %}
               </div>
-              <!-- /.grid-wrapper -->
             </div>
-            <!-- /.container -->
-            
-            
           </div>
-
           <hr>
-          <div class="fw-bold">Payable Amount</div>
-          <div id="payableAmount" class="fs-5 fw-bold">
-            Rs. 0.00
-          </div>
-
-          {{ plan_options_form.payment_status.label_tag }}
-          <div class="row">
-            {% for payment_status in plan_options_form.payment_status %}
-            <div class="col-6">
-              <div class="py-1">
-                {{ payment_status.tag }}
-                <label class="form-check-label ms-2" for="{{ payment_status.id_for_label }}">
-                  {{ payment_status.choice_label }}
-                </label>
+          <div class="row mb-3">
+            <div class="col-md-5">
+              <div class="form-group">
+                <label>Payment Mode</label>
+                {{ plan_options_form.payment_mode}}
+              </div>
+              <div class="form-group">
+                <label>Payment Status</label>
+                {{ plan_options_form.payment_status}}
               </div>
             </div>
-            {% endfor %}
+            <div class="offset-2 col-md-5">
+              <div class="form-group">
+                <label>Estimated Amount</label>
+                <div id="payableAmount" class="fw-bold">
+                  Rs. 0.00
+                </div>
+              </div>
+              <div class="form-group">
+                <label>Discount</label>
+                <div class="d-flex">
+                  <div>
+                    {{ plan_options_form.discount}}
+                  </div>
+                  <div>
+                    <button class="btn btn-outline-dark ms-2">Apply</button>
+                  </div>
+                </div>
+              </div>
+              <hr>
+              <div class="fw-bold">Total Amount</div>
+              <div id="payableAmount" class="fs-5 fw-bold">
+                Rs. 0.00
+              </div>
+            </div>
           </div>
-          <a href="{% url 'customer:onboard' customer_id %}" class="btn btn-light me-3">Go Back</a>
-          <button type="submit" class="btn btn-gradient-primary me-3" name="action" value="continue">Continue</button>
+          <div class="text-end">
+            <a href="{% url 'customer:onboard' customer_id %}" class="btn btn-outline-primary me-3">Go Back</a>
+            <button type="submit" class="btn btn-gradient-primary me-3" name="action" value="continue">
+              Continue
+            </button>
+          </div>
         </form>
       </div>
     </div>
