--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -9,14 +9,13 @@
 
 <style>
     .eye-toggle {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    color: #6d6d6d;
-}
-
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        color: #6d6d6d;
+    }
 </style>
 
 <div class="col-lg-4 mx-auto">
@@ -41,7 +40,8 @@
         <div class="form-group">
             <p class="text-muted font-weight-light mb-0">Password</p>
             <div class="position-relative">
-                <input type="password" class="form-control form-control-lg" name="password" autocomplete="current-password" required aria-describedby="id_password_helptext" id="id_password">
+                <input type="password" class="form-control form-control-lg" name="password"
+                    autocomplete="current-password" required aria-describedby="id_password_helptext" id="id_password">
                 <span class="eye-toggle mdi mdi-eye-off" onclick="togglePasswordVisibility('id_password')"></span>
             </div>
         </div>
@@ -57,7 +57,9 @@
         <div class="my-2 d-flex justify-content-between align-items-center">
             <div class="form-check">
                 <label class="form-check-label text-muted">
-                    <input type="checkbox" class="form-check-input"> Keep me signed in </label>
+                    <input type="checkbox" name="remember" id="id_remember" class="form-check-input">
+                    Keep me signed in
+                </label>
             </div>
             <a href="{% url 'account_reset_password'%}" class="auth-link">Forgot password?</a>
         </div>
@@ -78,7 +80,6 @@
     function togglePasswordVisibility(inputId) {
         var inputField = document.getElementById(inputId);
         var eyeIcon = inputField.nextElementSibling;
-
         if (inputField.type === "password") {
             inputField.type = "text";
             eyeIcon.classList.remove("mdi-eye-off");
