--- a/customer/templates/customer/select_plan.html
+++ b/customer/templates/customer/select_plan.html
@@ -59,7 +59,7 @@
               <small class="ms-3">Yearly</small>
             </div>
             <img src="{% static 'images/arrow.png' %}" />
-            <div class="discount-desc">
+            <div class="discount-desc pt-2">
               <label class="badge badge-success"><small>Save 15%</small></label>
               <p>12 Months of value, Pay for only 9</p>
             </div>
@@ -72,8 +72,8 @@
               </div>
             </div>
           </div>
+          <div id="paymentInfo" class="d-none row my-3">
           <hr>
-          <div class="row mb-3">
             <div class="col-md-5">
               <div class="form-group">
                 <label>Payment Mode</label>
@@ -86,34 +86,42 @@
             </div>
             <div class="offset-2 col-md-5">
               <div class="form-group">
-                <label>Estimated Amount</label>
-                <div id="payableAmount" class="fw-bold">
-                  ₹0.00
-                </div>
-              </div>
-              <div class="form-group">
                 <label>Discount</label>
-                <div class="d-flex">
-                  <div>
+                <div class="d-flex justify-content-between">
+                  <div class="flex-fill">
                     {{ plan_options_form.discount}}
                   </div>
                   <div>
-                    <button class="btn btn-outline-dark ms-2">Apply</button>
+                    <button type="button" class="btn btn-outline-dark ms-2" id="applyDiscount">Apply</button>
                   </div>
                 </div>
               </div>
+              <div class="amount-group d-flex justify-content-between">
+                <label>Subtotal</label>
+                <div id="subtotalAmount">
+                  ₹0.00
+                </div>
+              </div>
+              <div class="amount-group d-flex justify-content-between">
+                <label>Discount</label>
+                <div id="discountAmount">
+                  - ₹0.00
+                </div>
+              </div>
               <hr>
-              <div class="fw-bold">Total Amount</div>
-              <div id="payableAmount" class="fs-5 fw-bold">
-                Rs. 0.00
+              <div class="amount-group d-flex justify-content-between mb-3">
+                <label class="total">Total</label>
+                <div id="totalAmount" class="fw-bold">
+                  <small>INR</small> ₹0.00
+                </div>
               </div>
             </div>
-          </div>
-          <div class="text-end">
-            <a href="{% url 'customer:onboard' customer_id %}" class="btn btn-outline-primary me-3">Go Back</a>
-            <button type="submit" class="btn btn-gradient-primary me-3" name="action" value="continue">
-              Continue
-            </button>
+            <div class="text-end">
+              <a href="{% url 'customer:onboard' customer_id %}" class="btn btn-outline-primary me-3">Go Back</a>
+              <button type="submit" class="btn btn-gradient-primary" name="action" value="continue">
+                Collect Payment
+              </button>
+            </div>
           </div>
         </form>
       </div>
